      report \PR{18509}.

      \item Group \dQuote{Summary} computations such as
      \code{sum(1:3, 4, na.rm = 5, NA, 7, na.rm = LL)} now give an error
      instead of either \code{17} or \code{NN} for \code{LL} true or false,
      as proposed by Ivan Krylov on the R-devel mailing list.  (This
      also means it is now an error to specify \code{na.rm} more than once.)

      \item \code{as.complex(x)} now returns \code{NA_complex_} also for
      \code{NA_real_} arguments, as it does for all other \code{NA}s.

      \item Directories are now omitted by
      \code{file.copy(,recursive = FALSE)} and in \code{file.append()}
      (\PR{17337}).

      \item \code{gsub()} and \code{sub()} are now more robust to integer
      overflow when reporting errors caused by too large input strings
      (\PR{18346}).

      \item Top-level handlers are now more robust to attempts to remove a
      handler whilst handlers are running (\PR{18508}).

      \item The handling of \code{Alt+F4} in dialogs created on Windows using
      GraphApp has been fixed (\PR{13870}).

      \item \code{density()} more consistently computes grid values for the
      FFT-based convolution, following Robert Schlicht's analysis and
      proposal in \PR{18337}, correcting density values typically by a
      factor of about 0.999.  Optional \code{old.coords=TRUE} provides
      back compatibility.

      \item \code{palette.colors()} gains a \code{name} argument that
      defaults to \code{FALSE} controlling whether the vector of colours
      that is returned has names (where possible).  \PR{18529}.

      \item \code{tools::xgettext()} no longer extracts the
      (non-translatable) class names from \code{warningCondition} and
      \code{errorCondition} calls.

      \item \code{S3method(<gen>, <class>, <func>)} in the \file{NAMESPACE}
      file now works (again) when \code{<func>} is visible from the
      namespace, e.g., imported, or in base.
